fix mentor cards appt button alignment again

--- a/src/style.css
+++ b/src/style.css
@@ -237,10 +237,6 @@ footer, .select-options {
     background-color: lightgrey;
 }
 
-.appt-btn {
-    margin: auto;
-}
-
 .appt-btn:hover,
 .filter-btn {
     background-color: #846db0;
